--- a/scss/sections/__footer.scss
+++ b/scss/sections/__footer.scss
@@ -52,12 +52,10 @@
             margin: 50px 0;
         }
 
-        @supports (-webkit-touch-callout: none) {
-            /* CSS specific to iOS devices */ 
-            @media screen and (max-width: 400px){
-               margin: 0 !important;
-            }
-          }
+        @media screen and (max-width: 400px){
+           margin: 0 !important;
+           max-height: 290px;
+        }
     }
 
     &__newsletter{
